--- a/without-rbac.yaml
+++ b/without-rbac.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: nginx-ingress-controller
-          image: kubic/nginx-ingress-controller:10.0
+          image: registry.opensuse.org/devel/caasp/kubic-container/container/kubic/nginx-ingress-controller:0.15.0
           args:
             - /nginx-ingress-controller
             - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
