update README and yaml files with the opensuse kubic registry images
Signed-off-by: Jordi Massaguer Pla <jmassaguerpla@suse.de>

--- a/without-rbac.yaml
+++ b/without-rbac.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: nginx-ingress-controller
-          image: kubic/nginx-ingress-controller:10.0
+          image: kubic/nginx-ingress-controller:latest
           args:
             - /nginx-ingress-controller
             - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
