--- a/with-rbac.yaml
+++ b/with-rbac.yaml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: nginx-ingress-serviceaccount
       containers:
         - name: nginx-ingress-controller
-          image: kubic/nginx-ingress-controller:10.0
+          image: kubic/nginx-ingress-controller:latest
           args:
             - /nginx-ingress-controller
             - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
