--- a/deploy/templates/without-rbac.yaml.in
+++ b/deploy/templates/without-rbac.yaml.in
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: nginx-ingress-controller
-          image: registry.opensuse.org/devel/caasp/kubic-container/container/kubic/nginx-ingress-controller:0.15.0
+          image: @ingress_image_name@
           args:
             - /nginx-ingress-controller
             - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
